discussion/kv_engine/131654/131654_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-16181: Use isInSystemCollection EPBucket

Change a number of places where a full leb128 decode is used when
looking for system collection keys.

Change-Id: I3d44e568dceeeaebdda72b8f956815bf271ec524

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-06-30 13:50:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-30 14:25:45.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24903/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: no member named "isInSystemCollecton" in "DocKey"; did you mean "isInSystemCollection"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24903/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28890/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_bucket.cc(1079): error C2039: "isInSystemCollecton": is not a member of "DocKey" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28890/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3079/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1079:16: error: no member named "isInSystemCollecton" in "DocKey"; did you mean "isInSystemCollection"? [clang-diagnostic-error]
    if (docKey.isInSystemCollecton()) {
               ^~~~~~~~~~~~~~~~~~~
               isInSystemCollection
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:374:10: note: "isInSystemCollection" declared here
    bool isInSystemCollection() const;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1419:32: error: no member named "isInSystemCollecton" in "StoredDocKeyT<std::allocator>"; did you mean "isInSystemCollection"? [clang-diagnostic-error]
        if (val.item->getKey().isInSystemCollecton()) {
                               ^~~~~~~~~~~~~~~~~~~
                               isInSystemCollection
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/storeddockey.h:109:10: note: "isInSystemCollection" declared here
    bool isInSystemCollection() const;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1590:32: error: no member named "isInSystemCollecton" in "StoredDocKeyT<std::allocator>"; did you mean "isInSystemCollection"? [clang-diagnostic-error]
                item->getKey().isInSystemCollecton()) {
                               ^~~~~~~~~~~~~~~~~~~
                               isInSystemCollection
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/storeddockey.h:109:10: note: "isInSystemCollection" declared here
    bool isInSystemCollection() const;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3079/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: no member named "isInSystemCollecton" in "DocKey"; did you mean "isInSystemCollection"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3079/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4442/ : FAILURE

Compile error at [2020-06-30T14:23:24.891Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: ?struct DocKey? has no member named ?isInSystemCollecton?; did you mean ?isInSystemCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4508/ : FAILURE

Compile error at [2020-06-30T14:23:40.143Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: ?struct DocKey? has no member named ?isInSystemCollecton?; did you mean ?isInSystemCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4508/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4606/ : FAILURE

Compile error at [2020-06-30T14:24:54.191Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: ?struct DocKey? has no member named ?isInSystemCollecton?; did you mean ?isInSystemCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4606/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3547/ : FAILURE

Compile error at [2020-06-30T14:07:40.491Z] ../kv_engine/engines/ep/src/ep_bucket.cc:1079:16:
error: no member named "isInSystemCollecton" in "DocKey"; did you mean "isInSystemCollection"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12332/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1585/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
